Opdracht 8 server push af

--- a/AEX-Banner/nbproject/project.properties
+++ b/AEX-Banner/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/AEX-Banner.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.FontysPublisher.jar=FontysPublisher.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.FontysPublisher.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
